--- a/Ejercicio2/EjercicioDos.ipynb
+++ b/Ejercicio2/EjercicioDos.ipynb
@@ -5,7 +5,7 @@
    "id": "06cf64b4-3967-43d5-8de2-1e02e2806bcc",
    "metadata": {},
    "source": [
-    "Secod Class"
+    "Secod Class Adrian diaz manzanzares 2016494"
    ]
   },
   {
