--- a/Repaso/ClienteRepaso.ipynb
+++ b/Repaso/ClienteRepaso.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "2d23a92a-46f6-45a3-bc7f-0864eed5092e",
    "metadata": {},
    "outputs": [],
@@ -13,70 +13,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "928efb1b-48bb-4220-b9f5-a3ec00d3f44f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#22016494\n",
+    "\n",
     "import threading\n",
     "import pyrebase as py\n",
     "import socket \n",
-    "import pickle"
+    "import pickle\n",
+    "import os\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "21ac77f7-9829-485a-a851-6b7694ee9a7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "firebaseConfig = {\n",
-    " \"apiKey\": \"AIzaSyDvaqx4FUfvBVF75fo--uPXWCnq626rbaM\",\n",
-    "  \"authDomain\": \"repaso-a4bc2.firebaseapp.com\",\n",
-    "  \"databaseURL\": \"https://repaso-a4bc2-default-rtdb.europe-west1.firebasedatabase.app\",\n",
-    "  \"projectId\": \"repaso-a4bc2\",\n",
-    "  \"storageBucket\": \"repaso-a4bc2.appspot.com\",\n",
-    "  \"messagingSenderId\": \"997466082272\",\n",
-    "  \"appId\": \"1:997466082272:web:578b1289aebe4463653985\"\n",
+    "  \"apiKey\": \"AIzaSyAfMJEIxKfVX_eKTrIoVdXg09QY9USMlzc\",\n",
+    "  \"authDomain\": \"functions-real-case-pbi.firebaseapp.com\",\n",
+    "  \"databaseURL\": \"https://functions-real-case-pbi-default-rtdb.firebaseio.com\",\n",
+    "  \"projectId\": \"functions-real-case-pbi\",\n",
+    "  \"storageBucket\": \"functions-real-case-pbi.appspot.com\",\n",
+    "  \"messagingSenderId\": \"212033978800\",\n",
+    "  \"appId\": \"1:212033978800:web:e1d63004db5d6c6fe89675\",\n",
+    "  \"measurementId\": \"G-N23MB60FQV\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "ac9e55c3-4c33-4db3-959f-dfe487617bf4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "firebase = py.initialize_app(firebaseConfig)#Iniciamos el servidor "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b054d9ed-c28a-4c30-abbd-d1a52c5116f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "firebase = py.initialize_app(firebaseConfig)#Iniciamos el servidor \n",
     "ddbb = firebase.database()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6bff6f3f-10c5-4fb3-9262-7ed44e034d27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Escribe la ip a donde desea conectarse:  \n",
+      "Escriba el puerto con el que desea comunicarse:  59988\n",
+      "Nombre de usuario:  22016494\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hilo con PID 19044\n",
+      "Hilos activos 8\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Escriba texto ? ** Enviar = ENTER ** Abandonar Chat = Q \n",
+      " hola\n",
+      "\n",
+      "Escriba texto ? ** Enviar = ENTER ** Abandonar Chat = Q \n",
+      " hola\n",
+      "\n",
+      "Escriba texto ? ** Enviar = ENTER ** Abandonar Chat = Q \n",
+      " Q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " **** TALOGOOO  ****\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "class Cliente():\n",
-    "    host = input(\"Introduzca ip:\")\n",
-    "    port = int(input(\"introduce el puerto al que desea conectarse:\"))\n",
-    "    nick = input(\"Introduce el nickname\")\n",
-    "    \n",
+    "    host_ = input(\"Escribe la ip a donde desea conectarse: \")\n",
+    "    port_ = int(input(\"Escriba el puerto con el que desea comunicarse: \"))\n",
+    "    nick = input(\"Nombre de usuario: \")\n",
+    "\n",
     "    nicks = []\n",
     "    \n",
-    "    def __init__(self, host=host, port=port, nickname=nick):\n",
+    "    mail=nick+'@live.uem.es'\n",
+    "    ddbb.child('repasoParcial/22016494/cliente/'+nick+'/user/').set(mail) ##Se guarda el user en la carpeta Credenciales en la Base de Datos\n",
+    "\n",
+    "\n",
+    "    def __init__(self, host=socket.gethostname(), port=port_, nickname=nick):\n",
     "        self.sock = socket.socket()\n",
     "        self.sock.connect((str(host), int(port)))\n",
     "        hilo_recv_mensaje = threading.Thread(target=self.recibir)\n",
@@ -108,8 +157,8 @@
     "    def enviar(self, msg):\n",
     "        self.sock.send(pickle.dumps(msg))\n",
     "\n",
-    "    def enviarNick(self, nick):\n",
-    "        self.sock.send(pickle.dumps(nick))\n",
+    "    def enviarNick(self, nick_):\n",
+    "        self.sock.send(pickle.dumps(nick_))\n",
     "\n",
     "\n",
     "c = Cliente()"
