--- a/Repaso/ServidorRepaso.ipynb
+++ b/Repaso/ServidorRepaso.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "953dddbf-37fe-435c-a4c6-7bc03f908763",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "b058c911-6240-42e3-9659-abba7988524e",
    "metadata": {},
    "outputs": [],
@@ -20,33 +20,97 @@
     "import threading\n",
     "import socket\n",
     "import pickle\n",
-    "import pyrebase as py"
+    "import pyrebase as py\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "659f0124-be7f-4283-a54b-fb2de1ca0d1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "firebaseConfig = {\n",
-    " \"apiKey\": \"AIzaSyDvaqx4FUfvBVF75fo--uPXWCnq626rbaM\",\n",
-    "  \"authDomain\": \"repaso-a4bc2.firebaseapp.com\",\n",
-    "  \"databaseURL\": \"https://repaso-a4bc2-default-rtdb.europe-west1.firebasedatabase.app\",\n",
-    "  \"projectId\": \"repaso-a4bc2\",\n",
-    "  \"storageBucket\": \"repaso-a4bc2.appspot.com\",\n",
-    "  \"messagingSenderId\": \"997466082272\",\n",
-    "  \"appId\": \"1:997466082272:web:578b1289aebe4463653985\"\n",
+    "  \"apiKey\": \"AIzaSyAfMJEIxKfVX_eKTrIoVdXg09QY9USMlzc\",\n",
+    "  \"authDomain\": \"functions-real-case-pbi.firebaseapp.com\",\n",
+    "  \"databaseURL\": \"https://functions-real-case-pbi-default-rtdb.firebaseio.com\",\n",
+    "  \"projectId\": \"functions-real-case-pbi\",\n",
+    "  \"storageBucket\": \"functions-real-case-pbi.appspot.com\",\n",
+    "  \"messagingSenderId\": \"212033978800\",\n",
+    "  \"appId\": \"1:212033978800:web:e1d63004db5d6c6fe89675\",\n",
+    "  \"measurementId\": \"G-N23MB60FQV\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c45c8f31-709e-4fa1-8fcd-88f734a7257f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "firebase = py.initialize_app(firebaseConfig) ## Iniciamos el servidor desde el Jupyterlab\n",
+    "ddbb=firebase.database()\n",
+    "#dimensiones={'A':'206','B':'26'}\n",
+    "ddbb.child('repasoParcial/22016494/server/22016494/serverConfig').set(firebaseConfig) ##Se guarda el user en la carpeta Credenciales en la Base de Datos\n",
+    "ddbb.child('repasoParcial/22016494/server/22016494/dimensiones/').set(dimensiones) ##Se guarda el user en la carpeta Credenciales en la Base de Datos\n",
+    "storage=firebase.storage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7a8e34f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Escribe el puerto con el que desea comunicarse:  59988\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "192.168.0.13\n",
+      "Procesamiento de mensajes iniciado\n",
+      "\n",
+      "Conexion aceptada via <socket.socket fd=1824, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('192.168.0.13', 59988), raddr=('192.168.0.13', 49389)>\n",
+      "\n",
+      "22016494: hola\n",
+      "22016494: hola\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "SALIR = Q\n",
+      " q\n",
+      "SALIR = Q\n",
+      " Q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**** TALOGOOO *****\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "class Servidor():\n",
     "    port_ = int(input(\"Escribe el puerto con el que desea comunicarse: \"))\n",
@@ -54,6 +118,7 @@
     "    def __init__(self, host=socket.gethostname(), port=port_):\n",
     "        self.nicks = []\n",
     "        self.clientes = []\n",
+    "        print(socket.gethostbyname(host))\n",
     "        self.sock = socket.socket()\n",
     "        self.sock.bind((str(host), int(port)))\n",
     "        self.sock.listen(20)\n",
@@ -75,7 +140,7 @@
     "                print(\"**** TALOGOOO *****\")\n",
     "                self.sock.close()\n",
     "                sys.exit()\n",
-    "            elif msg == 'p': # si el usuario escribe por el servidor una p muestra los nicks que hay guardados\n",
+    "            elif msg == 'U': # si el usuario escribe por el servidor una p muestra los nicks que hay guardados\n",
     "                print(self.nicks)\n",
     "            else:\n",
     "                pass\n",
@@ -116,6 +181,14 @@
     "\n",
     "s = Servidor()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a85289a1-aedc-4da3-aa1c-2b2e6e583861",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
