--- a/Repaso/ClienteRepaso.ipynb
+++ b/Repaso/ClienteRepaso.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "928efb1b-48bb-4220-b9f5-a3ec00d3f44f",
    "metadata": {},
    "outputs": [],
@@ -30,26 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "21ac77f7-9829-485a-a851-6b7694ee9a7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "firebaseConfig = {\n",
-    "  \"apiKey\": \"AIzaSyAfMJEIxKfVX_eKTrIoVdXg09QY9USMlzc\",\n",
-    "  \"authDomain\": \"functions-real-case-pbi.firebaseapp.com\",\n",
-    "  \"databaseURL\": \"https://functions-real-case-pbi-default-rtdb.firebaseio.com\",\n",
-    "  \"projectId\": \"functions-real-case-pbi\",\n",
-    "  \"storageBucket\": \"functions-real-case-pbi.appspot.com\",\n",
-    "  \"messagingSenderId\": \"212033978800\",\n",
-    "  \"appId\": \"1:212033978800:web:e1d63004db5d6c6fe89675\",\n",
-    "  \"measurementId\": \"G-N23MB60FQV\"\n",
+    "  \"apiKey\": \"AIzaSyDvaqx4FUfvBVF75fo--uPXWCnq626rbaM\",\n",
+    "  \"authDomain\": \"repaso-a4bc2.firebaseapp.com\",\n",
+    "  \"databaseURL\": \"https://repaso-a4bc2-default-rtdb.europe-west1.firebasedatabase.app\",\n",
+    "  \"projectId\": \"repaso-a4bc2\",\n",
+    "  \"storageBucket\": \"repaso-a4bc2.appspot.com\",\n",
+    "  \"messagingSenderId\": \"997466082272\",\n",
+    "  \"appId\": \"1:997466082272:web:578b1289aebe4463653985\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "ac9e55c3-4c33-4db3-959f-dfe487617bf4",
    "metadata": {},
    "outputs": [],
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "6bff6f3f-10c5-4fb3-9262-7ed44e034d27",
    "metadata": {},
    "outputs": [
@@ -70,15 +69,15 @@
      "text": [
       "Escribe la ip a donde desea conectarse:  \n",
       "Escriba el puerto con el que desea comunicarse:  59988\n",
-      "Nombre de usuario:  22016494\n"
+      "Nombre de usuario:  adrian\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hilo con PID 19044\n",
-      "Hilos activos 8\n"
+      "Hilo con PID 12488\n",
+      "Hilos activos 7\n"
      ]
     },
     {
@@ -87,10 +86,10 @@
      "text": [
       "\n",
       "Escriba texto ? ** Enviar = ENTER ** Abandonar Chat = Q \n",
-      " hola\n",
+      " soso\n",
       "\n",
       "Escriba texto ? ** Enviar = ENTER ** Abandonar Chat = Q \n",
-      " hola\n",
+      " loso\n",
       "\n",
       "Escriba texto ? ** Enviar = ENTER ** Abandonar Chat = Q \n",
       " Q\n"
