--- a/Repaso/ServidorRepaso.ipynb
+++ b/Repaso/ServidorRepaso.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "953dddbf-37fe-435c-a4c6-7bc03f908763",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "b058c911-6240-42e3-9659-abba7988524e",
    "metadata": {},
    "outputs": [],
@@ -26,26 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "659f0124-be7f-4283-a54b-fb2de1ca0d1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "firebaseConfig = {\n",
-    "  \"apiKey\": \"AIzaSyAfMJEIxKfVX_eKTrIoVdXg09QY9USMlzc\",\n",
-    "  \"authDomain\": \"functions-real-case-pbi.firebaseapp.com\",\n",
-    "  \"databaseURL\": \"https://functions-real-case-pbi-default-rtdb.firebaseio.com\",\n",
-    "  \"projectId\": \"functions-real-case-pbi\",\n",
-    "  \"storageBucket\": \"functions-real-case-pbi.appspot.com\",\n",
-    "  \"messagingSenderId\": \"212033978800\",\n",
-    "  \"appId\": \"1:212033978800:web:e1d63004db5d6c6fe89675\",\n",
-    "  \"measurementId\": \"G-N23MB60FQV\"\n",
+    "   \"apiKey\": \"AIzaSyDvaqx4FUfvBVF75fo--uPXWCnq626rbaM\",\n",
+    "  \"authDomain\": \"repaso-a4bc2.firebaseapp.com\",\n",
+    "  \"databaseURL\": \"https://repaso-a4bc2-default-rtdb.europe-west1.firebasedatabase.app\",\n",
+    "  \"projectId\": \"repaso-a4bc2\",\n",
+    "  \"storageBucket\": \"repaso-a4bc2.appspot.com\",\n",
+    "  \"messagingSenderId\": \"997466082272\",\n",
+    "  \"appId\": \"1:997466082272:web:578b1289aebe4463653985\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "c45c8f31-709e-4fa1-8fcd-88f734a7257f",
    "metadata": {},
    "outputs": [],
@@ -54,13 +53,13 @@
     "ddbb=firebase.database()\n",
     "#dimensiones={'A':'206','B':'26'}\n",
     "ddbb.child('repasoParcial/22016494/server/22016494/serverConfig').set(firebaseConfig) ##Se guarda el user en la carpeta Credenciales en la Base de Datos\n",
-    "ddbb.child('repasoParcial/22016494/server/22016494/dimensiones/').set(dimensiones) ##Se guarda el user en la carpeta Credenciales en la Base de Datos\n",
+    "#ddbb.child('repasoParcial/22016494/server/22016494/matrices/').set(dimensiones) ##Se guarda el user en la carpeta Credenciales en la Base de Datos\n",
     "storage=firebase.storage()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "7a8e34f9",
    "metadata": {},
    "outputs": [
@@ -68,46 +67,19 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Escribe el puerto con el que desea comunicarse:  59988\n"
+      "Escribe el puerto con el que desea comunicarse:  \n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "192.168.0.13\n",
-      "Procesamiento de mensajes iniciado\n",
-      "\n",
-      "Conexion aceptada via <socket.socket fd=1824, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('192.168.0.13', 59988), raddr=('192.168.0.13', 49389)>\n",
-      "\n",
-      "22016494: hola\n",
-      "22016494: hola\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "SALIR = Q\n",
-      " q\n",
-      "SALIR = Q\n",
-      " Q\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**** TALOGOOO *****\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-6ff8f97c5afe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mServidor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mport_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Escribe el puerto con el que desea comunicarse: \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhost\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgethostname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mport\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mport_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnicks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-9-6ff8f97c5afe>\u001b[0m in \u001b[0;36mServidor\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mServidor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mport_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Escribe el puerto con el que desea comunicarse: \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhost\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgethostname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mport\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mport_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnicks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -172,10 +144,14 @@
     "                        data = c.recv(32)\n",
     "                        if data:\n",
     "                            self.broadcast(data, c)\n",
+    "                            #with open('22016494.txt','a') as writer:#Guardamos los mensajes en el .txt mediante el with para que se cierre automaticamente\n",
+    "                                 #writer.write(pickle.loads(data) + \"\\n\")#Debemos de guardar el mensaje deserializado\n",
     "                            if \": \" not in pickle.loads(data): #hace una comprobacion siempre que recibe cualquier dato para ver si es un nick o un mensaje del cliente\n",
     "                                self.nicks.append(pickle.loads(data)) #carga los nicks en la lista\n",
     "                            else:\n",
     "                                print(pickle.loads(data)) #envia el mensaje y se visualiza desde el servidor\n",
+    "                                with open('22016494.txt','a') as writer:#Guardamos los mensajes en el .txt mediante el with para que se cierre automaticamente\n",
+    "                                     writer.write(pickle.loads(data) + \"\\n\")#Debemos de guardar el mensaje deserializado\n",
     "                    except:\n",
     "                        pass\n",
     "\n",
